--- a/src/components/app-docs-nav/template.marko
+++ b/src/components/app-docs-nav/template.marko
@@ -8,51 +8,51 @@ aside class="docs-nav"
         h1
             - Marko
         ul
-            navLink linkName="marko/overview" href="/docs/" title="Overview"
+            navLink linkName="marko/overview" href="/docs/" title="概述"
             navLink [ linkName="marko/get-started" href="/docs/marko/get-started/"
-                title="Get Started" ]
+                title="入门" ]
             navLink [ linkName="marko/javascript-api"
                 href="/docs/marko/javascript-api/" title="JavaScript API" ]
             navLink [ linkName="marko/language-guide"
-                href="/docs/marko/language-guide/" title="Language Guide" ]
+                href="/docs/marko/language-guide/" title="语言指南" ]
             navLink [ linkName="marko/custom-taglibs"
-                href="/docs/marko/custom-taglibs/" title="Custom Taglibs" ]
+                href="/docs/marko/custom-taglibs/" title="自定义标签库" ]
             navLink [ linkName="marko/compiler" href="/docs/marko/compiler/"
                 title="Compiler" ]
-            navLink linkName="marko/faq" href="/docs/marko/faq/" title="FAQ"
+            navLink linkName="marko/faq" href="/docs/marko/faq/" title="常见问题"
             navLink [ linkName="marko/additional-resources"
                 href="/docs/marko/additional-resources/"
-                title="Additional Resources" ]
+                title="补充资源" ]
         div class="footer"
             a [ class="try-online" href="/try-online/"
                 target="_blank" ]
 
-                - Try Online!
+                - 在线试用!
                 lasso-img src="src/assets/new-window.svg" width="16" height="16"
     section
         h1
             - Marko Widgets
         ul
             navLink [ linkName="marko-widgets/overview" href="/docs/marko-widgets/"
-                title="Overview" ]
+                title="概述" ]
             navLink [ linkName="marko-widgets/get-started"
-                href="/docs/marko-widgets/get-started/" title="Get Started" ]
+                href="/docs/marko-widgets/get-started/" title="入门" ]
             navLink [ linkName="marko-widgets/component-lifecycle"
                 href="/docs/marko-widgets/component-lifecycle/"
-                title="Component Lifecycle" ]
+                title="组件生命周期" ]
             navLink [ linkName="marko-widgets/javascript-api"
                 href="/docs/marko-widgets/javascript-api/" title="JavaScript API" ]
             navLink [ linkName="marko-widgets/taglib-api"
-                href="/docs/marko-widgets/taglib-api/" title="Taglib API" ]
+                href="/docs/marko-widgets/taglib-api/" title="标签库API" ]
             navLink [ linkName="marko-widgets/faq" href="/docs/marko-widgets/faq/"
-                title="FAQ" ]
+                title="常见问题" ]
             navLink [ linkName="marko-widgets/additional-resources"
                 href="/docs/marko-widgets/additional-resources/"
-                title="Additional Resources" ]
+                title="补充资源" ]
         div class="footer"
             a [ class="try-online"
                 href="/marko-widgets/try-online/"
                 target="_blank" ]
 
-                - Try Online!
+                - 在线试用!
                 lasso-img src="src/assets/new-window.svg" width="16" height="16"
