--- a/src/components/app-docs-nav/template.marko
+++ b/src/components/app-docs-nav/template.marko
@@ -18,7 +18,7 @@ aside class="docs-nav"
             navLink [ linkName="marko/custom-taglibs"
                 href="/docs/marko/custom-taglibs/" title="自定义标签库" ]
             navLink [ linkName="marko/compiler" href="/docs/marko/compiler/"
-                title="Compiler" ]
+                title="编译器" ]
             navLink linkName="marko/faq" href="/docs/marko/faq/" title="常见问题"
             navLink [ linkName="marko/additional-resources"
                 href="/docs/marko/additional-resources/"
