--- a/src/layouts/default/template.marko
+++ b/src/layouts/default/template.marko
@@ -1,7 +1,7 @@
 <!doctype html>
 html lang="en"
     head
-        meata name="baidu-site-verification" content="Ftn9j8mVRt"
+        meata name="baidu-site-verification" content="cWqMGgYnl3"
         meta http-equiv="Content-Type" content="text/html" charset="UTF-8"
         meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
         title
