--- a/src/pages/home/template.marko
+++ b/src/pages/home/template.marko
@@ -27,8 +27,8 @@ layout-use("src/layouts/default/template.marko") site=site active-section="home"
                         p
                             ---
                             Marko是一个<a href="https://github.com/marko-js/templating-benchmarks"><i>相当</i>快速</a>
-                            和轻量的基于HTML的模版引擎，它回将模版编译成可读的兼容Node.js的JavaScript模块，它即可以运行在服务器
-                            也可以运行在浏览器种。它支持流、异步渲染和自定义标签。
+                            和轻量的基于HTML的模版引擎，它会将模版编译成可读且兼容Node.js的JavaScript模块，它即可以运行在服务器
+                            也可以运行在浏览器中。支持流、异步渲染和自定义标签。
                             ---
                         a href="/try-online/" target="_blank" class="try-online"
                             - 在线试用Marko！
@@ -43,7 +43,7 @@ layout-use("src/layouts/default/template.marko") site=site active-section="home"
                                 - Marko Widgets: UI组件
                         p
                             ---
-                            Marko Widgets是一个组件构建库，它利用Marko模版来作为视图。它提供来一些高级功能，例如：DOM对比／修补、批量更新、
+                            Marko Widgets是一个组件构建库，它利用Marko模版来作为视图。它提供了一些高级功能，例如：DOM对比／修补、批量更新、
                             状态化组件、声明式的事件绑定和高效的事件委托。
                             ---
                         a [ href="/marko-widgets/try-online/" target="_blank"
@@ -163,11 +163,11 @@ layout-use("src/layouts/default/template.marko") site=site active-section="home"
                         - 自定义标签
                         - 编译成可读的CommonJS模块
                         - 服务端和浏览器端都可渲染
-                        - 和一些web框架一起试用，包括：
+                        - 和一些web框架一起使用，包括：
                             - [Express](/docs/marko/express/)
                             - [Koa](/docs/marko/koa/)
                             - [Hapi](/docs/marko/hapi/)
-                        - [在流行的编辑器和IDE种语法高亮](http://markojs.com/docs/marko/additional-resources/#tools)
+                        - [在流行的编辑器和IDE中语法高亮](http://markojs.com/docs/marko/additional-resources/#tools)
                         ---
                 div.marketing-col
                     h3
@@ -185,19 +185,11 @@ layout-use("src/layouts/default/template.marko") site=site active-section="home"
                         - 兼容Redux
                         ---
                 div style="clear: both"
-                div class="videos"
-                    iframe [ width="560" height="315"
-                        src="https://www.youtube.com/embed/kCXs9ig8vTI"
-                        frameborder="0" allowfullscreen ]
-                    div
-                        a [ href="https://www.youtube.com/playlist?list=PLZUgs-F38XXQJBxA58UqnwTVMZS_uza_C"
-                            target="_blank" ]
 
-                            - 更多演示
 
                 hr
                 p
                     ---
                     如果你在找Marko v2的文档，请参阅：
-                    <a href="http://marko-v2.github.io/">遗留文档： Marko v2</a>
+                    <a href="http://marko-v2.github.io/">Marko v2</a>
                     ---
